Bug 446027 - Dolphin SVN plugin: part of previous SVN commit message appended to newer shorter one
Summary: Dolphin SVN plugin: part of previous SVN commit message appended to newer sho...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: plugins: svn (other bugs)
Version First Reported In: 21.08.3
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Sebastian Dörner
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-11-24 11:26 UTC by Jure Repinc
Modified: 2024-04-02 08:41 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jure Repinc 2021-11-24 11:26:51 UTC
SUMMARY
When I do a SVN commit a second time and the new commit message is shorter then previous one, then the extra characters from previous commit message are appendded to the new commit message.. E.g. if  previous message was "ABCDEF" and the new one entered is "GHI", then the actual commit message becomes "GHIDEF"


STEPS TO REPRODUCE
1. make a change to a file in SVN
2. right click and select "SVN Commit..." context menu entry
3. into the Description field enter the longer message, e.g. "ABCDEF"
4. click "Commit" button
5. make another change to the file in SVN
6. right click and select "SVN Commit..." context menu entry
7. into the Description field enter the shorter message, e.g. "GHI"
8. click "Commit" button
9. right click and select "SVN Log" context menu entry

OBSERVED RESULT
The latest revision has "GHIDEF" as message

EXPECTED RESULT
The latest revision should have only "GHI" as message

SOFTWARE/OS VERSIONS
Operating System: Kubuntu 21.10
KDE Plasma Version: 5.23.3
KDE Frameworks Version: 5.88.0
Qt Version: 5.15.2
Kernel Version: 5.13.0-21-generic (64-bit)
Graphics Platform: X11
Comment 1 Bug Janitor Service 2024-03-31 18:02:34 UTC
A possibly relevant merge request was started @ https://invent.kde.org/sdk/dolphin-plugins/-/merge_requests/57
Comment 2 Méven Car 2024-04-02 08:41:26 UTC
Git commit 3e422ab0589ee9713a6478a2c9e51f4d58991c23 by Méven Car, on behalf of Nikolai Krasheninnikov.
Committed on 02/04/2024 at 08:41.
Pushed by meven into branch 'master'.

[svn] Fix part or previous commit message append to new shorter one

We use file from QTemporaryFile to fill it with commit message and pass
to svn. As QTemporaryFile creates one file per instance we should manualy
clear it each time or else we will mix messages.
(https://doc.qt.io/qt-6/qtemporaryfile.html#details)

M  +2    -0    svn/fileviewsvnplugin.cpp

https://invent.kde.org/sdk/dolphin-plugins/-/commit/3e422ab0589ee9713a6478a2c9e51f4d58991c23