[svn] Fix part or previous commit message append to new shorter one

We use file from QTemporaryFile to fill it with commit message and pass
to svn. As QTemporaryFile creates one file per instance we should manualy
clear it each time or else we will mix messages.
(https://doc.qt.io/qt-6/qtemporaryfile.html#details)

BUG: 446027